--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -23,7 +23,6 @@
             </ul>
 
             <ul class="flex">
-                <li ><img src="image.png" alt=""></li>
                 <div>
                     <li ><input type="text" class="input-buscar" placeholder="Buscar"></li>
                 </div>
@@ -32,8 +31,8 @@
         </nav>
 
         
-        <h1 >Laboratorio N°6</h1>
-        <h1>Positions and Floating</h1>
+        <h1 class="titulo">Laboratorio N°6</h1>
+        <h1 class="titulo">Positions and Floating</h1>
     </header>
 
     <section class="content">
@@ -42,24 +41,48 @@
         <div class="gallery">
             <h3 class="sbn">Mojito</h3>
             <img src="img/images.jfif" >
-            <p >Es un cóctel popular originario de Cuba, compuesto de ron, limón, menta o eucalipto y agua mineral...</p>
-            <a href="" class="vm">Ver más</a>
+            <p >Es un cóctel popular originario de Cuba, compuesto de ron, limón, menta o eucalipto y agua mineral...
+                <details>
+                    <summary class="vm">Ver mas</summary> <br>
+                    <p>de los más famosos y ricos</p>
+                </details>
+            </p>
         </div>
 
         <div class="gallery">
             <h3 class="sbn">Piña Colada</h3>
             <img src="img/piña.jpg">
-            <p >Es una bebida cuyos ingredientes principales son la piña, la crema de coco y el ron...</p>
-            <a href="" class="vm">Ver más</a>
+            <p >Es una bebida cuyos ingredientes principales son la piña, la crema de coco, el ron y adicional...
+                <details>
+                    <summary class="vm">Ver mas</summary> <br>
+                    <p>de los más famosos y ricos</p>
+                </details>
+            </p>
         </div>
 
         <div class="gallery">
             <h3 class="sbn">Martini</h3>
             <img src="img/marg.jpg" >
-            <p >Es uno de los cócteles más conocidos, compuesto de ginebra con una porción de vermut...</p>
-            <a href="" class="vm">Ver más</a>
+            <p >Es uno de los cócteles más conocidos, compuesto de ginebra con una porción de...
+                <details>
+                    <summary class="vm">Ver mas</summary> <br>
+                    <p>de los más famosos y ricos</p>
+                </details>
+            </p>
         </div>
 
+    </div>
+</section>
+
+<section class="foto">
+    <div>
+        <h1 class="font">Lavanda</h1>
+        <p>Es un arbusto aromático, muy ramificado, de ramas ascendentes o erectas, 
+            hojas lanceoladas, estrechadas en ambos extremos, con bordes enteros y algo enrollados y 
+            flores de color lila azulado, agrupadas en espigas; puede alcanzar hasta 2 m de altura.</p>
+        <p>Es el mismo aroma que se puede percibir al momento que cada uno de nuestros clientes 
+            llegan al local a compartir y a degustar de nuestros increíbles y maravillosos cocteles.
+        </p>
     </div>
 
 </section>
@@ -68,6 +91,7 @@
 
 <footer>
 
+    <br>
     <div>
         <h2 class="sbn">SOBRE NOSOTROS</h2>
     </div>
@@ -106,6 +130,7 @@
         </div>  
     </div>
 
+    <br>
     <div class="grupo-2">
         <small>&copy;2022 <b>Micheladas</b> - Todos los derechos reservados.</small>
     </div>
